[package]
name = "borderland"
version = "0.1.0"
authors = ["Dudochkin Victor <dudochkin.victor@gmail.com>"]

[lib]
name = "borderland"
path = "src/lib.rs"

[features]
default = []
javascript = ["mozjs_sys"]


[dependencies]
httparse = "1.2.1"
openssl = "0.10.10"
conduit-mime-types = "0.7.3"
mio = "0.6.14"
mio-extras = "2.0"
features = "0.9.0"
log = "0.4.0"
env_logger = "0.5.10"
slab = "0.3"
byteorder = "1.2"
bytes = "0.4"
net2 = "0.2"
cpuprofiler = "0.0.3"
flame = "0.2.2"
flamer = "^0.2.2"

#wampire = { path = "ThirdParty/wampire" }
#rand = { git = "https://github.com/rust-lang-nursery/rand", branch = "next" }

mozjs_sys = { version = "0.51.1", optional = true }

[profile.release]
debug = true